--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -137,3 +137,34 @@ display: none; /* Chrome, Safari, and Opera */
   min-height: calc(1.5em * 10); /* Adjusts to 4 lines based on line-height */
   line-height: 1.5em; /* Sets the spacing for each line */
 }
+
+.custom-html p {
+  margin-bottom: 1rem; /* Adds space between paragraphs */
+}
+
+.custom-html h1 {
+  font-weight: bold;
+  font-size: 30px; /* Set h1 font size to 30px */
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.custom-html h2 {
+  font-weight: bold;
+  font-size: 23px; /* Set h2 font size to 20px */
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.custom-html h3 {
+  font-weight: bold;
+  font-size: 20x; /* Set h3 font size to 15px */
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.custom-html br {
+  display: block;
+  content: "";
+  margin-top: 0.5rem;
+}
